--- a/src/gui/player/package.json
+++ b/src/gui/player/package.json
@@ -3,42 +3,27 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build --dest=../../../gui/panel",
-    "lint": "vue-cli-service lint"
+    "start": "webpack serve --mode=development",
+    "build": "webpack build --mode=production",
+    "test": "npm run build"
   },
   "dependencies": {
-    "axios": "0.21.4",
-    "bulma": "0.9.4",
-    "core-js": "3.14.0",
-    "vue": "3.1.1",
-    "vue-axios": "3.2.4",
-    "vue-router": "4.0.9"
+    "@popperjs/core": "^2.11.8",
+    "bootstrap": "^5.3.2",
+    "jquery": "^3.7.1"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "5.0.8",
-    "@vue/cli-plugin-eslint": "5.0.8",
-    "@vue/cli-service": "5.0.8",
-    "@vue/compiler-sfc": "3.1.1",
-    "babel-eslint": "10.1.0",
-    "eslint": "7.5.0",
-    "eslint-plugin-vue": "7.5.0",
-    "sass": "1.70.0",
-    "sass-loader": "10.2.0"
-  },
-  "eslintConfig": {
-    "root": true,
-    "env": {
-      "node": true
-    },
-    "extends": [
-      "plugin:vue/vue3-essential",
-      "eslint:recommended"
-    ],
-    "parserOptions": {
-      "parser": "babel-eslint"
-    },
-    "rules": {}
+    "autoprefixer": "^10.4.17",
+    "css-loader": "^6.10.0",
+    "html-webpack-plugin": "^5.6.0",
+    "postcss-loader": "^8.1.0",
+    "sass": "^1.70.0",
+    "sass-loader": "^14.1.0",
+    "style-loader": "^3.3.4",
+    "terser-webpack-plugin": "^5.3.10",
+    "webpack": "^5.90.1",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^4.15.1"
   },
   "browserslist": [
     "> 1%",
