--- a/src/gui/player/package.json
+++ b/src/gui/player/package.json
@@ -8,22 +8,23 @@
     "test": "npm run build"
   },
   "dependencies": {
-    "@popperjs/core": "^2.11.8",
-    "bootstrap": "^5.3.2",
-    "jquery": "^3.7.1"
+    "@fontsource/poppins": "^5.0.8",
+    "@popperjs/core": "2.11.8",
+    "bootstrap": "5.3.2",
+    "jquery": "3.7.1"
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.17",
-    "css-loader": "^6.10.0",
-    "html-webpack-plugin": "^5.6.0",
-    "postcss-loader": "^8.1.0",
-    "sass": "^1.70.0",
-    "sass-loader": "^14.1.0",
-    "style-loader": "^3.3.4",
-    "terser-webpack-plugin": "^5.3.10",
-    "webpack": "^5.90.1",
-    "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^4.15.1"
+    "autoprefixer": "10.4.17",
+    "css-loader": "6.10.0",
+    "html-webpack-plugin": "5.6.0",
+    "postcss-loader": "8.1.0",
+    "sass": "1.70.0",
+    "sass-loader": "14.1.0",
+    "style-loader": "3.3.4",
+    "terser-webpack-plugin": "5.3.10",
+    "webpack": "5.90.1",
+    "webpack-cli": "5.1.4",
+    "webpack-dev-server": "4.15.1"
   },
   "browserslist": [
     "> 1%",
