--- a/src/gui/rcontrol/package.json
+++ b/src/gui/rcontrol/package.json
@@ -1,17 +1,17 @@
 {
-  "name": "panel",
+  "name": "rcontrol",
   "version": "1.0.0",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build --dest=../../../gui/panel",
+    "build": "vue-cli-service build --dest=../../../gui/rcontrol",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
     "axios": "0.21.4",
+    "bootstrap": "5.3.2",
     "bulma": "0.9.4",
     "core-js": "3.14.0",
-    "qrcode.vue": "3.4.1",
     "vue": "3.1.1",
     "vue-axios": "3.2.4",
     "vue-router": "4.0.9"
